--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "_transcription",
+  "name": "transcription",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node src/main/server.ts",
+    "dev:server": "ts-node-dev --ignore-watch node_modules src/main/server.ts"
+  },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
