--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/multer": "^1.4.5",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   }
 }
